# docs/apidocs_v1.yaml
@@ -40,6 +40,28 @@ paths:
             "*/*":
               schema:
                 $ref: "#/components/schemas/SliceResponsePostListResponse"
+  /api/v1/posts/{postId}:
+    get:
+      tags:
+        - post-controller
+      summary: 게시글 상세 조회
+      operationId: getPostDetail
+      parameters:
+        - name: postId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PostDetailResponse"
+        "404":
+          description: 게시글을 찾을 수 없음
 components:
   schemas:
     PostListResponse:
@@ -94,3 +116,31 @@ components:
         lastPostId:
           type: integer
           format: int64
+    PostDetailResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        content:
+          type: string
+        bgmUrl:
+          type: string
+        isSubscriberOnly:
+          type: integer
+          format: int32
+        hashtags:
+          type: string
+        memberId:
+          type: integer
+          format: int64
+        authorName:
+          type: string
+        authorProfileImage:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
