# src/types/post.ts
@@ -20,3 +20,16 @@ export interface PostListSlice {
   hasNext: boolean;
   lastPostId: number | null;
 }
+
+export interface PostDetail {
+  id: number;
+  content: string;
+  bgmUrl: string | null;
+  isSubscriberOnly: number;
+  hashtags: string;
+  memberId: number;
+  authorName: string;
+  authorProfileImage: string | null;
+  createdAt: string;
+  updatedAt: string;
+}
